[package]
name = "hc-homie5"
version = "0.5.0"
edition = "2021"
publish = true
description = "Provides higher level function implementation for homie5 homie devices (discovery and device implementation)."
repository = "https://github.com/homie-homecontrol/hc-homie5"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "homecontrol", "iot", "mqtt", "homie5"]

[features]
default = ["base", "macros","homie_client","tokio"]
base = []
macros = ["dep:hc-homie5-macros"]
homie_client = ["dep:rumqttc","dep:rand"]
tokio = ["dep:tokio", "dep:tokio-util"]

[dependencies]
log = "0.4.22"
rumqttc = { version = "0.25.0", optional = true }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "macros", "sync", "time"], optional = true }
serde = { version = "1.0.214", features = ["derive"] }
tokio-util = { version = "0.7.13", optional = true }
paste = "1.0.15"
rand = { version = "0.10.0", optional = true}
hc-homie5-macros = { version = "0.2.0", optional = true }
regex = { version = "1.11.1" }
chrono = { version = "0.4.38", features = ["serde"] }
homie5 = "0.8.2"

[dev-dependencies]
serde_yml = "0.0.12"
