[package]
name = "hc-homie5"
version = "0.9.0"
edition = "2021"
publish = true
description = "Provides higher level function implementation for homie5 homie devices (discovery and device implementation)."
repository = "https://github.com/homie-homecontrol/hc-homie5"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "homecontrol", "iot", "mqtt", "homie5"]

[features]
default = ["base", "macros","framework","tokio"]
base = []
macros = ["dep:hc-homie5-macros"]
framework = ["dep:rumqttc","dep:rand","dep:tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
ext-meta = ["homie5/ext-meta"]

[dependencies]
log = "0.4"
rumqttc = { version = "0.25", optional = true }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time", "signal"], optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.7", optional = true }
paste = "1.0"
rand = { version = "0.10", optional = true}
hc-homie5-macros = { version = "0.4", optional = true }
regex = { version = "1.12" }
chrono = { version = "0.4", features = ["serde"] }
schemars = "1.2"
homie5 = { version = "0.11" }
hc-homie5-smarthome = { version = "0.6" }

[dev-dependencies]
serde_yaml_ng = "0.10"
